# query-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  debug_azure_detailed.py  pyproject.toml  web_interface_progress.md
future_improvements/: backend_architecture_issues.md
src/qgen/: __init__.py  __main__.py
src/qgen/cli/: main.py  rag.py  review.py
src/qgen/core/: adversarial_generation.py  chunk_processing.py  config.py  data.py  dimensions.py  embedding_providers.py  env.py  export.py  generation.py  guidance.py  llm_api.py  models.py  rag_export.py  rag_generation.py  rag_models.py  rag_quality.py  rich_output.py  structured_llm.py
src/qgen/examples/dimensions/: customer_support.yml  e_commerce.yml  mental_health.yml  question_answering.yml  real_estate.yml
src/qgen/prompts/: adversarial_query_generation.txt  fact_extraction.txt  multihop_query_generation.txt  query_generation.txt  realism_scoring.txt  standard_query_generation.txt  tuple_generation.txt
src/qgen/shared/: __init__.py  errors.py  export.py  providers.py
src/qgen/web/: README.md  backend.py  launcher.py
src/qgen/web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
src/qgen/web/frontend-legacy/: package-lock.json  package.json  vite.config.ts
src/qgen/web/frontend-legacy/src/: App.tsx
src/qgen/web/frontend-legacy/src/components/dimension/: QueryReview.tsx
src/qgen/web/frontend-legacy/src/components/rag/: RAGProjectDashboard.tsx  SingleQueryReview.tsx
src/qgen/web/frontend-legacy/src/components/shared/: FactCard.tsx  ProgressBar.tsx  ProviderSelector.tsx  StageSelector.tsx
src/qgen/web/frontend-shadcn/: package-lock.json  package.json  vite.config.ts
src/qgen/web/frontend-shadcn/src/: App.tsx  main.tsx
src/qgen/web/frontend-shadcn/src/components/: ProjectSelector.tsx  query-generator.code-workspace
src/qgen/web/frontend-shadcn/src/components/dimension/: DimensionProjectDashboard.tsx  QueryReview.tsx  TupleReview.tsx
src/qgen/web/frontend-shadcn/src/components/rag/: RAGProjectDashboard.tsx  SingleQueryReview.tsx
src/qgen/web/frontend-shadcn/src/components/shared/: ChunkHighlighter.tsx  FactCard.tsx  FileUpload.tsx  KeyboardShortcutDemo.tsx  Notification.tsx  ProgressBar.tsx  ProviderSelector.tsx  StatusCard.tsx
src/qgen/web/frontend-shadcn/src/components/ui/: button-with-shortcut.tsx  keyboard-shortcut.tsx
src/qgen/web/frontend-shadcn/src/hooks/: use-keyboard-shortcuts.ts  use-theme.ts
src/qgen/web/frontend/src/: App.tsx  index.css
src/qgen/web/frontend/src/components/: ProjectDashboard.tsx  ProjectSelector.tsx  QueryReview.tsx  TupleReview.tsx
src/qgen/web/frontend/src/components/dimension/: DimensionEditShortcuts.tsx  QueryReview.tsx  (+5 more)
src/qgen/web/frontend/src/hooks/: use-keyboard-shortcuts.ts
(+13 files in other folders)
